# Hear-Me

./: .gitignore  Procfile  README.md  firebase.json  pubspec.yaml  requirements.txt
.VSCodeCounter/2025-08-09_22-59-34/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
android/app/: build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp.example
app/: server.py
assets/: gru_hand_gesture_model.tflite
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: constant.dart  current_session_model.dart  firebase_options.dart  gemini_test.dart  homepage_windows.dart  login.dart  main.dart  new_onboarding_page.dart  onboarding_page.dart  onboarding_page_windows.dart  transcription_page.dart  vocabulary_page.dart
lib/app/: current_session_model.dart
lib/feature/: gemini_test.dart  hand_landmarker_service.dart
lib/services/: azure_stt_bridge.dart  gemini_summary_service.dart  livestream_service.dart  whiteboard_stream_service.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/bridge/: AzureSttBridge.deps.json
windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp
(+13 files in other folders)
